--- a/RP2T3/nbproject/private/private.properties
+++ b/RP2T3/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Amanda Gobus\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\Arcano\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
