--- a/RP2T3/nbproject/project.properties
+++ b/RP2T3/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=rp2t3.RP2T3
+main.class=Main.RP2T3
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
